fix: don't allow large emojis to overlap Setting line-height to the same as the font-size seems to perfectly display emojis without overlap, even on y-overflow, on MacOS. Hopefully the same effect is seen on other OS'es.

--- a/src/styles.css
+++ b/src/styles.css
@@ -224,6 +224,7 @@ body {
   padding-left: 0;
   margin-top: 25px;
   margin-bottom: 25px;
+  line-height: 75px;
 }
 
 .msg-them {
